cabal-version: 2.2
name: rampart
version: 2.0.0.8
synopsis: Determine how intervals relate to each other.
description: Rampart determines how intervals relate to each other.
build-type: Simple
category: Math
extra-doc-files:
  CHANGELOG.md
  README.md
  docs/interval-relations.svg

license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/rampart
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>=4.18.0.0 || ^>=4.19.0.0 || ^>=4.20.0.0
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

  if impl(ghc >= 9.8)
    ghc-options: -Wno-missing-role-annotations

common executable
  import: library
  build-depends: rampart
  ghc-options:
    -rtsopts
    -threaded
    -Wno-unused-packages

library
  import: library
  -- cabal-gild: discover source/library
  exposed-modules: Rampart
  hs-source-dirs: source/library

test-suite rampart-test-suite
  import: executable
  build-depends:
    hspec ^>=2.11.8

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
